# replayable-mini-rag

./: .coverage  .gitignore  Makefile  README.md  policy.json  pyproject.toml  queries.json  requirements.txt  run.py  sample_overrides.json  serve.py  validate.py
documents/: billing.txt  product_overview.txt  security.txt
src/minirag/: __init__.py  audit.py  chunking.py  error_analysis.py  generate.py  indexing.py  io_utils.py  llm.py  metrics.py  paths.py  pipeline.py  prompts.py  report.py  retrieval.py  review.py  revise.py  schemas.py  state.py
tests/: conftest.py  test_audit.py  test_chunking.py  test_error_analysis.py  test_generate_validation.py  test_indexing.py  test_io_utils.py  test_llm.py  test_metrics.py  test_paths.py  test_pipeline.py  test_prompts.py  test_report.py  test_retrieval.py  test_retrieval_embedding.py  test_review.py  test_revise.py  test_run_cli.py  test_schemas.py  test_state.py  test_validate.py
web/: index.html
